website populated with information

--- a/index.html
+++ b/index.html
@@ -10,49 +10,110 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="hero-text-container">
 			<h1 class="editable">Workshop on Ocean Turbulence</h1>
 			<p class="subtext editable">22 - 26 January 2018 at UKZN, Durban.</p>
-			<div class="cta button alt"><a href="#">Register Now</a></div>
+			<div class="cta button alt"><a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">Register Now</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
+
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
+				<h3 class="editable">Presented by</h3>
+				<p class="editable">Rockland Scientific and Fluid Mechanics Lab at UKZN</p>
+				<p class="editable"><a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">Register till 10th January 2018</a></p>
+			</div>
+			<div class="text">
+				<h3 class="editable">Sponsored through</h3>
+					<p class="editable">United State's Office of Naval Research</p>
+			</div>
+		</div>
+	</section>
+	
+	<section class="info">
+		<div class="container flex">
+			<div class="text">
+				<h2 class="editable">Program</h2>
+					<h3 class="editable">Monday 22nd January 2018</h4>
+						<p class="editable">0800 – 0830  –  Registration</p>
+						<p class="editable">0830 – 0845  –  Welcome & Intro</p>
+			</div>
+			<div class="text">
+					<h3 class="editable">Sessions</h4>
+					<h4 class="editable">Monday, Tuesday & Thursday, Friday</h5>
+						<p class="editable">0830 – 1300 Morning Session with a coffee/tea break</p>
+						<p class="editable">1300 – 1400 Lunch</p>
+						<p class="editable">1400 – 1600 Afternoon Session</p>
+					<h3 class="editable">Field trip to Durban Harbour</h4>
+						<p class="editable">Wednesday 0800 – 1600</p>
+						<p class="editable">On ship deployments of VMP-250</p>
+			</div>
+				
+			<!--
 				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
 			</div>
-			<div class="image">
+			<div class="text">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
 			</div>
+			-->
 		</div>
 	</section>
 
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<h2 class="editable">Session Contents</h2>
+				<p class="editable">Two to four units are taught each day, a special session is planned for Friday, which will 
+				include scientific presentations on ocean research in South Africa.</p>
 			</div>
+			
+			<div class="text">
+				<h4 class="editable">(1) Fundamental Turbulence Theory</h4>				
+				<h4 class="editable">(2) Ocean Turbulence Theory </h4>
+				<h4 class="editable">(3) Introduction to the VMP-250 </h4>
+				<h4 class="editable">(4) Data Acquisition Software (ODAS5IR)  </h4>
+				<h4 class="editable">(5) Pre-deployment Checks  </h4>
+				<h4 class="editable">(6) Ocean Turbulence Measurement Techniques  </h4>
+				<h4 class="editable">(7) Ocean Turbulence Measurement Sensors </h4>
+				<h4 class="editable">(8) VMP-250 Deployment  </h4>
+				<h4 class="editable">(9) VMP-250 Maintenance </h4>
+				<h4 class="editable">(10) Data Conversion and Processing </h4>
+				<h4 class="editable">(11) Signal Conditioning  </h4>
+				<h4 class="editable">(12) Advanced Techniques in Data Processing </h4>
+			</div>
+					
+			<!--
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
 			</div>
+			-->
 		</div>
 	</section>
 
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<h2 class="editable">Accommodation</h2>
+				<p class="editable">We blocked rooms/beds in some place close to the university, some of them offer dorm rooms
+				that can be shared by several students.</p>
 			</div>
+			<div class="text">
+			<h3 class="editable">Curiosity backpackers</h3>
+			<p class="editable">...</p>
+			<h3 class="editable">The pastoral house</h3>
+			<p class="editable">...</p>
+			</div>
+			<!--
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
 			</div>
+			-->
 		</div>
 	</section>
 
+	<!--
 	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
@@ -62,4 +123,5 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			</div>
 		</div>
 	</section>
+	-->
 </div>
