--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 title: Contact
 description: Send us a message to find out more!
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  latitude: -29.866063
+  longitude: 30.982171
+  address: "Howard College Campus, King George V Avenue, Durban 1 George Str"
   zoom: 13
 image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 ---
@@ -12,14 +12,15 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Get in touch today</h1>
-			<p class="subtext editable">If you have any questions or queries send us a message and we'll get back to you as soon as we can.</p>
+			<h1 class="editable">Location </h1>
+			<p class="subtext editable">The workshop takes place in Civil Engineering Centenary Building on Howard College Campus.</p>
 		</div>
 	</div>
 </section>
 
 <section class="pad">
 	<div class="text-container contact-box">
+	<!--
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
 			<input type="hidden" name="_to" value="support@cloudcannon.com">
 			<input type="text" name="_gotcha" style="display: none;">
@@ -35,13 +36,14 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 
 			<input type="submit" value="Send Message">
 		</form>
+	-->
 
 		<div class="contact-details">
 			<h3>Address</h3>
 			<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 			<h3>Email</h3>
-			<p class="editable"><a href="mailto:support@example.com">support@example.com</a></p>
+			<p class="editable"><a href="mailto:tirok@ukzn.ac.za">turbu18@ukzn.ac.za</a></p>
 		</div>
 	</div>
 </section>
