--- a/about.html
+++ b/about.html
@@ -1,18 +1,22 @@
 ---
 title: About
-description: We've built an amazing team of developers, marketers, designers and sales people.
 image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Our Story</h1>
-			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<h1 class="editable">Who are the organisers?</h1>
+			<p class="subtext editable"><a href="https://rocklandscientific.com">Rockland Scientific</a> is the leading company in 
+			building turbulence profilers for oceanographic research. The learning units are presented by <a href="https://rocklandscientific.com/about-rsi/the-team/">
+			Dr. Rolf Lueck</a> and <a href="https://rocklandscientific.com/about-rsi/the-team/">Evan Cervelli</a> </p>
+			<p class="subtext editable">The Fluid Mechanics Lab at UKZN is located within the Civil Engineering Department and is
+			 led by <a href = "http://civeng.ukzn.ac.za/Schoolleadershipandstaff/DerekStretch.aspx">Prof. Derek Stretch</a></p>
 		</div>
 	</div>
 </section>
 
+<!--
 <section class="pad">
 	<div class="container">
 		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
@@ -20,12 +24,15 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 			{% for person in site.staff_members %}
 				<li>
 					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
+		-->
 					<!--
 					<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a></div>
 					-->
+	<!--
 					<div class="position">{{ person.position }}</div>
 				</li>
 			{% endfor %}
 		</ul>
 	</div>
 </section>
+-->
