minor updates to site name and description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
-description: The latest app to help you find new friends with common interests.
+description: Workshop Website
 image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
@@ -96,14 +96,17 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">Accommodation</h2>
-				<p class="editable">We blocked rooms/beds in some place close to the university, some of them offer dorm rooms
-				that can be shared by several students.</p>
+				<p class="editable">All places suggested are safe and close to campus or just a short drive away. Some offer shared accommodation.</p>
 			</div>
 			<div class="text">
-			<h3 class="editable">Curiosity backpackers</h3>
-			<p class="editable">...</p>
-			<h3 class="editable">The pastoral house</h3>
-			<p class="editable">...</p>
+			<h4 class="editable">B&Bs close to campus:</h4>
+			<p class="editable"><a href ="">An Upper Room</a>, R700 per room</p>
+			<p class="editable"><a href="https://www.nunuburd.com">Nunuburd</a>, R660 per room</p>
+			<h4 class="editable">Backpackers that offer dorm accommodation:</h4>
+			<p class="editable"><a href="http://www.nomadsbp.com">
+									Nomads Backpackers</a> in Musgrave, from R180 ppn</p>
+			<p class="editable"><a href="http://curiocitybackpackers.com/Durban-Backpackers-Hostels.html">
+									Curiocity backpackers</a> in Durban central, from R180 ppn</p>
 			</div>
 			<!--
 			<div class="image">
