--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: Workshop Website
-image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
+image: /images/beachfront2.jpg 
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
@@ -21,13 +21,33 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h3 class="editable">Presented by</h3>
+			<!--
+				<h2 class="editable">Presented by</h2>
+			-->
+			<!--
 				<p class="editable">Rockland Scientific and Fluid Mechanics Lab at UKZN</p>
-				<p class="editable"><a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">Register till 10th January 2018</a></p>
+				-->
+				<p class="editable">Rockland Scientific and the Fluid Mechanics Lab in Civil Engineering at UKZN are presenting a 5 day workshop on ocean turbulence with theoretical, practical and data processing units. The workshop is sponsored by the United State's Office of Naval Research. </p>			
+	
+<table>
+	
+	<tr>
+	<td align="center" style="background-color:white" style="width:33.3%"><a href="https://rocklandscientific.com"><img style="display:block;" height="120"  src="./images/rockland_logo.png" alt="Rockland Scientific"></a></td>
+	<td align="center" style="background-color:white" style="width:33.3%"><a href="https://www.onr.navy.mil"><img style="display:block;" height="90"  src="./images/onr-Logo.png" alt="ONR"></a></td>
+	</tr>
+</table>
+	
 			</div>
+			
 			<div class="text">
+
+	<p align="center" style="background-color:white" style="width:3.3%"><a href="https://www.ukzn.ac.za"><img style="display:block;" height="100"  src="./images/ukzn-logo.jpg" alt="UKZN"></a></p>
+				<p class="editable">Workshop fees are ZAR 500. Students can apply for a bursary to cover fee and travel costs.</p>
+				<p class="editable"><a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">Register</a> until 10th January 2018</p>
+				<!--
 				<h3 class="editable">Sponsored through</h3>
 					<p class="editable">United State's Office of Naval Research</p>
+					-->
 			</div>
 		</div>
 	</section>
@@ -65,8 +85,11 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">Session Contents</h2>
-				<p class="editable">Two to four units are taught each day, a special session is planned for Friday, which will 
-				include scientific presentations on ocean research in South Africa.</p>
+				<p class="editable">Two to four units are taught each day, the
+				<a href="https://rocklandscientific.com/products/profilers/vmp-250/">VMP-250 Turbulence Profiler</a> will be 
+				introduced to demonstrate the measurement of micro-scale turbulence. </p>
+				<p class="editable">A special session is planned for Friday, which will include scientific presentations 
+				on ocean research in South Africa.</p>
 			</div>
 			
 			<div class="text">
