--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: About
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+image: /images/harbour1.jpg
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
