optimised pics for web

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: About
-image: /images/harbour1.jpg
+image: /images/harbour1Bs.jpg
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
