--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: Workshop Website
-image: /images/beachfront2Bs.jpg 
+image: /images/beachfront2.jpg 
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
