corrections for names

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ image: /images/harbour1Bs.jpg
 			<p class="subtext editable"><a href="https://rocklandscientific.com">Rockland Scientific</a> is the leading company in 
 			building turbulence profilers for oceanographic research. The learning units are presented by <a href="https://rocklandscientific.com/about-rsi/the-team/">
 			Dr. Rolf Lueck</a> and <a href="https://rocklandscientific.com/about-rsi/the-team/">Evan Cervelli</a> </p>
-			<p class="subtext editable">The Fluid Mechanics Lab at UKZN is located within the Civil Engineering Department and is
+			<p class="subtext editable">The Environmental Fluid Mechanics Lab at UKZN is located within the Civil Engineering Department and is
 			 led by <a href = "http://civeng.ukzn.ac.za/Schoolleadershipandstaff/DerekStretch.aspx">Prof. Derek Stretch</a></p>
 		</div>
 	</div>
