--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Workshop on Ocean Turbulence</h1>
+			<h1 class="editable">Ocean Turbulence Workshop</h1>
 			<p class="subtext editable">22 - 26 January 2018 at UKZN, Durban.</p>
 			<div class="cta button alt"><a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">Register Now</a></div>
 		</div>
@@ -27,7 +27,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<!--
 				<p class="editable">Rockland Scientific and Fluid Mechanics Lab at UKZN</p>
 				-->
-				<p class="editable">Rockland Scientific and the Fluid Mechanics Lab in Civil Engineering at UKZN are presenting a 5 day workshop on ocean turbulence with theoretical, practical and data processing units. The workshop is sponsored by the United State's Office of Naval Research. </p>			
+				<p class="editable">Rockland Scientific and the Environmental Fluid Mechanics Lab in Civil Engineering at UKZN are presenting a 5 day workshop on ocean turbulence with theoretical, practical and data processing units. The workshop is sponsored by the United State's Office of Naval Research. </p>			
 	
 <table>
 	
@@ -107,7 +107,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				<h4 class="editable">(9) VMP-250 Maintenance </h4>
 				<h4 class="editable">(10) Data Conversion and Processing </h4>
 				<h4 class="editable">(11) Signal Conditioning  </h4>
-				<h4 class="editable">(12) Advanced Techniques in Data Processing </h4>
+				<h4 class="editable">(12) Glider measurements with MicroRider </h4>
 			</div>
 					
 			<!--
