added link to B&B

--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			</div>
 			<div class="text">
 			<h4 class="editable">B&Bs close to campus:</h4>
-			<p class="editable"><a href ="">An Upper Room</a>, R700 per room</p>
+			<p class="editable"><a href ="http://www.anupperroom.co.za">An Upper Room</a>, R700 per room</p>
 			<p class="editable"><a href="https://www.nunuburd.com">Nunuburd</a>, R660 per room</p>
+			<p class="editable"><a href="http://thedeckonmanning.co.za">The Deck on Manning</a></p>
+
 			<h4 class="editable">Backpackers that offer dorm accommodation:</h4>
 			<p class="editable"><a href="http://www.nomadsbp.com">
 									Nomads Backpackers</a> in Musgrave, from R180 ppn</p>
