changed email info shown

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@ image: /images/Centenary.jpg
 			-->
 
 			<h3>Email</h3>
-			<p class="editable"><a href="mailto:tirok@ukzn.ac.za, stretchd@ukzn.ac.za, chetty@ukzn.ac.za">turbulence2018@ukzn.ac.za</a></p>
+			<p class="editable"><a href="mailto:tirok@ukzn.ac.za, stretchd@ukzn.ac.za, chetty@ukzn.ac.za">click for email</a></p>
 			<h3>Phone</h3>
 			<p class="editable">031 260 3058</p>
 		</div>
