update infos, take out fees:

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<!--
 				<p class="editable">Rockland Scientific and Fluid Mechanics Lab at UKZN</p>
 				-->
-				<p class="editable">Rockland Scientific and the Environmental Fluid Mechanics Lab in Civil Engineering at UKZN are presenting a 5 day workshop on ocean turbulence with theoretical, practical and data processing units. The workshop is sponsored by the United State's Office of Naval Research. </p>			
+				<p class="editable">Rockland Scientific and the Environmental Fluid Mechanics Lab in Civil Engineering at UKZN are presenting a 5 day workshop on ocean turbulence with theoretical, practical and data processing units. 
+				The workshop is aimed at post-graduate students and researchers with a strong interest in oceanography as well as at technical personal working in the ocean environment.</p>			
 	
 <table>
 	
@@ -42,8 +43,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<div class="text">
 
 	<p align="center" style="background-color:white" style="width:3.3%"><a href="https://www.ukzn.ac.za"><img style="display:block;" height="100"  src="./images/ukzn-logo.jpg" alt="UKZN"></a></p>
-				<p class="editable">Workshop fees are ZAR 500. Students can apply for a bursary to cover fee and travel costs.</p>
-				<p class="editable"><a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">Register</a> until 15th January 2018</p>
+				<p class="editable">The workshop is sponsored by the United State's Office of Naval Research.</p>
+				<p class="editable">Students can apply for a bursary to cover travel costs.</p>
+				<p class="editable">Please register <a href="https://goo.gl/forms/LD0i0D0mZTQqzTKD2">here</a>.</p>
 				<!--
 				<h3 class="editable">Sponsored through</h3>
 					<p class="editable">United State's Office of Naval Research</p>
@@ -91,8 +93,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 				<p class="editable">Two to four units are taught each day, the
 				<a href="https://rocklandscientific.com/products/profilers/vmp-250/">VMP-250 Turbulence Profiler</a> will be 
 				introduced to demonstrate the measurement of micro-scale turbulence. </p>
-				<p class="editable">A special session is planned for Friday, which will include scientific presentations 
-				on ocean research in South Africa.</p>
+				<p class="editable">The focus of units will take into account the technical background of participants.
+				<!--<p class="editable">A special session is planned for Friday, which will include scientific presentations 
+				on ocean research in South Africa.</p>-->
 			</div>
 			
 			<div class="text">
