--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<div class="text">
 					<h3 class="editable">Sessions</h4>
 					<h4 class="editable">Monday to Friday</h5>
-						<p class="editable">0830 – 1300 Morning Session with a coffee/tea break</p>
-						<p class="editable">1300 – 1400 Lunch</p>
-						<p class="editable">1400 – 1600 Afternoon Session</p>
+						<p class="editable">0830 – 1200 Morning Session with a coffee/tea break</p>
+						<p class="editable">1200 – 1300 Lunch</p>
+						<p class="editable">1300 – 1600 Afternoon Session with short break</p>
 					<h3 class="editable">Field trip to Durban Harbour</h4>
 						<p class="editable">One day of the week will be spent on a boat with on ship deployments of 
 						the VMP-250</p>
